<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#A1C18E60">

    <!-- Lottie Animation in center -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/login_animation"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_fileName="girl_cycling_in_autumn.json"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Login Title -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/login"
        android:textColor="@color/logo_brown"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_animation" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/logo_brown"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <!-- Password Input -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:backgroundTint="@color/logo_brown"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/logo_brown"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/don_t_have_an_account"
        android:textColor="#7F894823"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#211818"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/logo_brown"
        android:textColorLink="#FFC107"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
